[package]
name = "mtbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver", "critical-section-impl", "unstable-pac"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
fixed = "1.24.0"
fixed-macro = "1.2.0"
heapless = "0.8.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
smart-leds = "0.4.0"
pio-proc = "0.2"
pio = "0.2.1"


[profile.release]
debug = 2
