[package]
name = "mtbus"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
## need these for pio
pio-proc = "0.2.2"
pio = "0.2.1"
## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
embassy-usb-driver = { version = "0.1.0", features = ["defmt"] }
embassy-usb-logger = { version = "0.1.0" }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
log = "0.4"
## network support
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
# wiznet ethernet driver support
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
## pico-w support
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
static_cell = { version = "2"}

fixed = "1.24.0"
fixed-macro = "1.2.0"
heapless = "0.8.0"
smart-leds = "0.4.0"

[patch.crates-io]
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8b36a32ed5d834b23e970d5b723dd7df1f1c94a2" }


[profile.release]
debug = 2
