[workspace] 

members = [ 
    "source/mtbus-translator", 
    "source/mtbus-controller",
    "source/mtbus-shared"
]

[patch.crates-io]
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "20fd03a14f1261e7b2264dcbca8e164393e66b94" }
erdnuss-comms = { git = "https://github.com/JomerDev/erdnuss-pub", rev = "a8cb22b62b3fe543618517e7efd94c0dc6f9367a" }


# [package]
# name = "mtbus"
# version = "0.1.0"
# edition = "2021"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
